k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto3-202200129
  labels:
    app: weather-tweets
    student: "202200129"
