k8s/kafka-strimzi.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: proyecto3-202200129
spec:
  ports:
  - port: 9092
    name: kafka
    targetPort: 9092
  selector:
    strimzi.io/name: kafka-cluster-kafka
