k8s/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: proyecto3-202200129
  labels:
    app: locust
    student: "202200129"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        ports:
        - containerPort: 8089
          name: web
        - containerPort: 5557
          name: master
        args:
        - "--locustfile=/mnt/locust/locustfile.py"
        - "--web-host=0.0.0.0"
        volumeMounts:
        - mountPath: /mnt/locust
          name: locust-script
      volumes:
      - name: locust-script
        configMap:
          name: locust-script
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: proyecto3-202200129
spec:
  ports:
  - port: 8089
    targetPort: 8089
    name: web
  - port: 5557
    targetPort: 5557
    name: master
  selector:
    app: locust
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: proyecto3-202200129
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /locust
        pathType: Prefix
        backend:
          service:
            name: locust
            port:
              number: 8089
